# onscripter-engine-android

./: .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
jni/: Application.mk
jni/application/: Android.mk
jni/application/onscripter/: BaseReader.h  DirectReader.cpp  LUAHandler.cpp  ONScripter.cpp  ONScripter.h  ONScripter_command.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_file2.cpp  ONScripter_image.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  ONScripter_text.cpp  ScriptDecoder.cpp  ScriptDecoder.h  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.cpp  ScriptParser.h  ScriptParser_command.cpp  backtrace.cpp  onscripter_main.cpp
jni/sdl/src/video/android/: SDL_androidvideo.c
src/com/onscripter/: Audio.java  DemoGLSurfaceView.java  ONScripterView.java
src/main/cpp/bzip2-1.0.5/: CMakeLists.txt
src/main/cpp/freetype/: CMakeLists.txt
src/main/cpp/jpeg/: CMakeLists.txt
src/main/cpp/libmad-0.15.1b/: CMakeLists.txt
src/main/cpp/lua/: CMakeLists.txt
src/main/cpp/onscripter/: BaseReader.h  DirectReader.cpp  DirectReader.h  FontInfo.cpp  FontInfo.h  Makefile.onscripter  NsaReader.cpp  NsaReader.h  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  ONScripter_text.cpp  SarReader.cpp  SarReader.h  ScriptDecoder.cpp  ScriptDecoder.h  ScriptException.cpp  ScriptException.h  ScriptParser.cpp  ScriptParser.h  ScriptParser_command.cpp  backtrace.cpp  backtrace.h  jni_helper.h  onscripter_main.cpp
src/main/cpp/png/: CMakeLists.txt
src/main/cpp/sdl/: CMakeLists.txt
src/main/cpp/sdl_image/: CMakeLists.txt  IMG_jpg.c  SDL_image.h
src/main/cpp/sdl_main/: sdl_main.c
src/main/cpp/sdl_mixer/: CMakeLists.txt  music_mad.c
src/main/cpp/sdl_ttf/: CMakeLists.txt
src/main/cpp/tremor/: CMakeLists.txt  framing.c  ivorbisfile.h  ogg.h  vorbisfile.c
src/main/java/com/onscripter/: Audio.java  DemoGLSurfaceView.java  GLSurfaceView_SDL.java  ONScripterView.java
